--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,10 @@
     <title>Portfolio</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,14 +21,14 @@
   </head>
   <body>
     <!--Header-->
-    <header>
+    <header class="header-nav-container">
       <a class="site-nav-links logo" href="./index.html"
         ><div class="first-logo">
           <span>Web</span>
           <span>Studio</span>
         </div></a
       >
-      <nav>
+      <nav class="nav-bar">
         <ul class="list">
           <li><a class="nav-link" href="#">Agencja</a></li>
           <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
@@ -39,133 +42,137 @@
     </header>
     <!--Main-->
     <main>
-      <div>
-        <ul class="filter list">
-          <li>
-            <button class="filter-button" type="button">Wszystkie</button>
-          </li>
-          <li><button class="filter-button" type="button">Strony</button></li>
-          <li>
-            <button class="filter-button" type="button">Aplikacje</button>
-          </li>
-          <li><button class="filter-button" type="button">Dizajn</button></li>
-          <li>
-            <button class="filter-button" type="button">Marketing</button>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <ul class="portfolio list">
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_8.jpg"
-                alt="Zdjęcie otwartego laptopa z widocznym na ekranie układem strony internetowej"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Technocrack</p>
-              <p class="project-type">Strona internetowa</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_9.jpg"
-                alt="Grafika przedstawiająca dwóch graczy koszykówki"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Grafika New Orlean vs Golden Star</p>
-              <p class="project-type">Dizajn</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_10.jpg"
-                alt="Logo restauracji Seafood z nazwą na tle ryby"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Resturacja Seafood</p>
-              <p class="project-type">Aplikacja</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_11.jpg"
-                alt="Słuchawki nauszne"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Projekt Prime</p>
-              <p class="project-type">Marketing</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_12.jpg"
-                alt="Dwa pudełka kartonowe"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Projekt Boxes</p>
-              <p class="project-type">Aplikacja</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_13.jpg"
-                alt="Monitor z wyświetloną stroną internetową"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Inspiration has no Borders</p>
-              <p class="project-type">Strona internetowa</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_14.jpg"
-                alt="Otwarty magazyn"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Magazyn Limited Edition</p>
-              <p class="project-type">Dizajn</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_15.jpg"
-                alt="Zdjęcie przywieszki"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Projekt LAB</p>
-              <p class="project-type">Marketing</p>
-            </div>
-          </li>
-          <li>
-            <div class="portfolio-element">
-              <img
-                src="images/img_16.jpg"
-                alt="Zdjęcie otwartego laptopa z widoczną stroną Growing Business"
-                width="370"
-                height="294"
-              />
-              <p class="project-name">Growing Business</p>
-              <p class="project-type">Aplikacja</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+      <!--Portfolio section-->
+      <section class="container section">
+        <div>
+          <ul class="filter">
+            <li>
+              <button class="filter-button" type="button">Wszystkie</button>
+            </li>
+            <li><button class="filter-button" type="button">Strony</button></li>
+            <li>
+              <button class="filter-button" type="button">Aplikacje</button>
+            </li>
+            <li><button class="filter-button" type="button">Dizajn</button></li>
+            <li>
+              <button class="filter-button" type="button">Marketing</button>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="portfolio">
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_8.jpg"
+                  alt="Zdjęcie otwartego laptopa z widocznym na ekranie układem strony internetowej"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Technocrack</p>
+                <p class="project-type">Strona internetowa</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_9.jpg"
+                  alt="Grafika przedstawiająca dwóch graczy koszykówki"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Grafika New Orlean vs Golden Star</p>
+                <p class="project-type">Dizajn</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_10.jpg"
+                  alt="Logo restauracji Seafood z nazwą na tle ryby"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Resturacja Seafood</p>
+                <p class="project-type">Aplikacja</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_11.jpg"
+                  alt="Słuchawki nauszne"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Projekt Prime</p>
+                <p class="project-type">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_12.jpg"
+                  alt="Dwa pudełka kartonowe"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Projekt Boxes</p>
+                <p class="project-type">Aplikacja</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_13.jpg"
+                  alt="Monitor z wyświetloną stroną internetową"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Inspiration has no Borders</p>
+                <p class="project-type">Strona internetowa</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_14.jpg"
+                  alt="Otwarty magazyn"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Magazyn Limited Edition</p>
+                <p class="project-type">Dizajn</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_15.jpg"
+                  alt="Zdjęcie przywieszki"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Projekt LAB</p>
+                <p class="project-type">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <div class="portfolio-element">
+                <img
+                  src="images/img_16.jpg"
+                  alt="Zdjęcie otwartego laptopa z widoczną stroną Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <p class="project-name">Growing Business</p>
+                <p class="project-type">Aplikacja</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--End of portfolio section-->
     </main>
     <!--Footer-->
     <footer>
