adding next styles to project files

--- a/index.html
+++ b/index.html
@@ -22,26 +22,25 @@
   <body>
     <!--Header-->
     <header>
-      <section class="container header-nav-container">
-        <a class="site-nav-links logo" href="./index.html"
-          ><div class="first-logo">
-            <span>Web</span>
-            <span>Studio</span>
-          </div></a
-        >
-        <nav class="nav-bar">
-          <ul class="list">
-            <li><a class="nav-link" href="#">Agencja</a></li>
-            <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="nav-link" href="#">Kontakt</a></li>
-          </ul>
+      <section class="container">
+        <nav class="header-nav">
+          <div class="nav-links">
+            <a class="logo" href="./index.html"
+              ><h2 class="first-logo">Web<span>Studio</span></h2></a
+            >
+            <ul class="nav-bar">
+              <li><a class="nav-link" href="#">Agencja</a></li>
+              <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+              <li><a class="nav-link" href="#">Kontakt</a></li>
+            </ul>
+          </div>
+          <div class="header-contact">
+            <a class="contact-item" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="contact-item" href="tel:+48111111111">+48111111111</a>
+          </div>
         </nav>
-        <div>
-          <a class="email" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="phone" href="tel:+48111111111">+48111111111</a>
-        </div>
       </section>
     </header>
     <!--Main part-->
@@ -53,7 +52,6 @@
           <button class="button-box">Zamów usługę</button>
         </div>
       </section>
-      <!--End of hero section-->
       <!--Article section-->
       <section class="container section">
         <ul class="article-box list">
@@ -102,7 +100,6 @@
             </article>
           </li>
         </ul>
-        <!--End of article section-->
         <!--Information section-->
         <div class="information-container">
           <h2 class="secondary-header">Czym się zajmujemy</h2>
@@ -134,7 +131,6 @@
           </ul>
         </div>
       </section>
-      <!--End of information section-->
       <!--Team section-->
       <section class="team-section">
         <div class="container section team-container">
@@ -191,28 +187,22 @@
           </ul>
         </div>
       </section>
-      <!--End of team container-->
     </main>
     <!--Footer-->
     <footer>
       <div class="footer-container">
-        <div class="container">
+        <div class="container footer-items">
           <a class="logo" href="index.html"
-            ><div class="second-logo">
-              <span>Web</span>
-              <span>Studio</span>
-            </div></a
+            ><h2 class="second-logo">Web<span>Studio</span></h2></a
           >
-          <address>
+          <address class="footer-contact">
             <span class="address-info"
               >m. Warszawa, Aleje Jerozolimskie 21</span
             >
-            <div>
-              <a class="email" href="mailto:minfo@example.com"
-                >info@example.com</a
-              >
-              <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
-            </div>
+            <a class="contact-item" href="mailto:minfo@example.com"
+              >info@example.com</a
+            >
+            <a class="contact-item" href="tel:+48111111111">+48 111 111 111</a>
           </address>
         </div>
       </div>
