--- a/portfolio.html
+++ b/portfolio.html
@@ -21,24 +21,27 @@
   </head>
   <body>
     <!--Header-->
-    <header class="header-nav-container">
-      <a class="site-nav-links logo" href="./index.html"
-        ><div class="first-logo">
-          <span>Web</span>
-          <span>Studio</span>
-        </div></a
-      >
-      <nav class="nav-bar">
-        <ul class="list">
-          <li><a class="nav-link" href="#">Agencja</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-link" href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <div>
-        <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="phone" href="tel:+48111111111">+48111111111</a>
-      </div>
+    <header>
+      <section class="container">
+        <nav class="header-nav">
+          <div class="nav-links">
+            <a class="logo" href="./index.html"
+              ><h2 class="first-logo">Web<span>Studio</span></h2></a
+            >
+            <ul class="nav-bar">
+              <li><a class="nav-link" href="#">Agencja</a></li>
+              <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+              <li><a class="nav-link" href="#">Kontakt</a></li>
+            </ul>
+          </div>
+          <div class="header-contact">
+            <a class="contact-item" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="contact-item" href="tel:+48111111111">+48111111111</a>
+          </div>
+        </nav>
+      </section>
     </header>
     <!--Main-->
     <main>
@@ -62,112 +65,130 @@
         <div>
           <ul class="portfolio">
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_8.jpg"
                   alt="Zdjęcie otwartego laptopa z widocznym na ekranie układem strony internetowej"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Technocrack</p>
-                <p class="project-type">Strona internetowa</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Technocrack</p>
+                  <p class="project-type">Strona internetowa</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_9.jpg"
                   alt="Grafika przedstawiająca dwóch graczy koszykówki"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Grafika New Orlean vs Golden Star</p>
-                <p class="project-type">Dizajn</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Grafika New Orlean vs Golden Star</p>
+                  <p class="project-type">Dizajn</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_10.jpg"
                   alt="Logo restauracji Seafood z nazwą na tle ryby"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Resturacja Seafood</p>
-                <p class="project-type">Aplikacja</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Resturacja Seafood</p>
+                  <p class="project-type">Aplikacja</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_11.jpg"
                   alt="Słuchawki nauszne"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Projekt Prime</p>
-                <p class="project-type">Marketing</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Projekt Prime</p>
+                  <p class="project-type">Marketing</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_12.jpg"
                   alt="Dwa pudełka kartonowe"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Projekt Boxes</p>
-                <p class="project-type">Aplikacja</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Projekt Boxes</p>
+                  <p class="project-type">Aplikacja</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_13.jpg"
                   alt="Monitor z wyświetloną stroną internetową"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Inspiration has no Borders</p>
-                <p class="project-type">Strona internetowa</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Inspiration has no Borders</p>
+                  <p class="project-type">Strona internetowa</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_14.jpg"
                   alt="Otwarty magazyn"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Magazyn Limited Edition</p>
-                <p class="project-type">Dizajn</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Magazyn Limited Edition</p>
+                  <p class="project-type">Dizajn</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_15.jpg"
                   alt="Zdjęcie przywieszki"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Projekt LAB</p>
-                <p class="project-type">Marketing</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Projekt LAB</p>
+                  <p class="project-type">Marketing</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <div class="portfolio-element">
+              <figure class="portfolio-element">
                 <img
                   src="images/img_16.jpg"
                   alt="Zdjęcie otwartego laptopa z widoczną stroną Growing Business"
                   width="370"
                   height="294"
                 />
-                <p class="project-name">Growing Business</p>
-                <p class="project-type">Aplikacja</p>
-              </div>
+                <figcaption class="project-description">
+                  <p class="project-name">Growing Business</p>
+                  <p class="project-type">Aplikacja</p>
+                </figcaption>
+              </figure>
             </li>
           </ul>
         </div>
@@ -177,21 +198,20 @@
     <!--Footer-->
     <footer>
       <div class="footer-container">
-        <a class="logo" href="index.html"
-          ><div class="second-logo">
-            <span>Web</span>
-            <span>Studio</span>
-          </div></a
-        >
-        <address>
-          <span class="address-info">m. Warszawa, Aleje Jerozolimskie 21</span>
-          <div>
-            <a class="email" href="mailto:minfo@example.com"
+        <div class="container footer-items">
+          <a class="logo" href="index.html"
+            ><h2 class="second-logo">Web<span>Studio</span></h2></a
+          >
+          <address class="footer-contact">
+            <span class="address-info"
+              >m. Warszawa, Aleje Jerozolimskie 21</span
+            >
+            <a class="contact-item" href="mailto:minfo@example.com"
               >info@example.com</a
             >
-            <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
-          </div>
-        </address>
+            <a class="contact-item" href="tel:+48111111111">+48 111 111 111</a>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
