separating article-section and information-section

--- a/index.html
+++ b/index.html
@@ -100,37 +100,38 @@
             </article>
           </li>
         </ul>
-        <!--Information section-->
-        <div class="information-container">
-          <h2 class="secondary-header">Czym się zajmujemy</h2>
-          <ul class="portfolio list">
-            <li>
-              <img
-                src="images/img_1.jpeg"
-                alt="Stnowisko pracy z wydocznym monitorem, tabltem, klawiaturą i notatkami"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="images/img_2.jpeg"
-                alt="Biurko z laptopem i monitorem"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="images/img_3.jpeg"
-                alt="Paleta kolorów na ekranie tableta, na tle biurka"
-                width="370"
-                height="294"
-              />
-            </li>
-          </ul>
-        </div>
       </section>
+      <!--Information section-->
+      <section class="container information-container">
+        <h2 class="secondary-header">Czym się zajmujemy</h2>
+        <ul class="portfolio list">
+          <li>
+            <img
+              src="images/img_1.jpeg"
+              alt="Stnowisko pracy z wydocznym monitorem, tabltem, klawiaturą i notatkami"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img_2.jpeg"
+              alt="Biurko z laptopem i monitorem"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img_3.jpeg"
+              alt="Paleta kolorów na ekranie tableta, na tle biurka"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+
       <!--Team section-->
       <section class="team-section">
         <div class="container section team-container">
